syntax = "proto3";

package proto;

option go_package = "slash";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/ElrondNetwork/elrond-go-core/data/block/blockV2.proto";

enum ThreatLevel {
  Zero   = 0;
  Low    = 1;
  Medium = 2;
  High   = 3;
}

message HeadersV2{
  repeated HeaderV2 Headers = 1;
}
